# candela

./: .gitignore  README.md  pyproject.toml  requirements.txt  showcase.ipynb
doc/: doc.md
src/candela/: __init__.py  functions.py  particles2d.py  plotting.py
src/candela.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/integration/: test_plot_features.py  test_preprocess.py
tests/integration/fixtures/: features.pickle  sample_ieeg.mat  sample_traces.csv
tests/unit/: test_forest.py  test_helpers.py  test_threshold.py  test_tukey.py
